--- a/.github/workflows/website-deploy.yml
+++ b/.github/workflows/website-deploy.yml
@@ -1,39 +1,39 @@
-name: Website Deploy
-
-on:
-  push:
-    branches:
-      - main
-
-jobs:
-  build:
-    name: Website Build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: website/package-lock.json
-      - name: Install dependencies
-        run: npm ci
-        working-directory: website
-      - name: Build website
-        run: npm run build
-        working-directory: website
-      - uses: actions/upload-pages-artifact@v2
-        with:
-          path: website/build
-  deploy:
-    name: Website Deploy
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/deploy-pages@v2
+#name: Website Deploy
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#jobs:
+#  build:
+#    name: Website Build
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 18
+#          cache: npm
+#          cache-dependency-path: website/package-lock.json
+#      - name: Install dependencies
+#        run: npm ci
+#        working-directory: website
+#      - name: Build website
+#        run: npm run build
+#        working-directory: website
+#      - uses: actions/upload-pages-artifact@v2
+#        with:
+#          path: website/build
+#  deploy:
+#    name: Website Deploy
+#    needs: build
+#    permissions:
+#      pages: write
+#      id-token: write
+#    environment:
+#      name: github-pages
+#      url: ${{ steps.deployment.outputs.page_url }}
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/deploy-pages@v2
