--- a/.github/workflows/website-test.yml
+++ b/.github/workflows/website-test.yml
@@ -1,24 +1,24 @@
-name: Website Test
-
-on:
-  pull_request:
-    branches:
-      - main
-
-jobs:
-  test:
-    name: Website Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
-          cache-dependency-path: website/package-lock.json
-      - name: Install dependencies
-        run: npm ci
-        working-directory: website
-      - name: Test build
-        run: npm run build
-        working-directory: website
+#name: Website Test
+#
+#on:
+#  pull_request:
+#    branches:
+#      - main
+#
+#jobs:
+#  test:
+#    name: Website Test
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: actions/setup-node@v3
+#        with:
+#          node-version: 18
+#          cache: npm
+#          cache-dependency-path: website/package-lock.json
+#      - name: Install dependencies
+#        run: npm ci
+#        working-directory: website
+#      - name: Test build
+#        run: npm run build
+#        working-directory: website
