--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -1,108 +1,108 @@
-name: Static Analysis
-
-on:
-  pull_request:
-    branches:
-      - main
-  push:
-    branches:
-      - main
-
-env:
-  GRADLE_OPTS: -Dorg.gradle.daemon=false
-
-jobs:
-  commit-lint:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: wagoid/commitlint-github-action@v6
-        with:
-          configFile: .commitlintrc.yml
-  code-base-checks:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-    - name: Check copyrights, license headers, and .gitattributes
-      uses: gradle/gradle-build-action@v3
-      with:
-        gradle-home-cache-cleanup: true
-        arguments: checkCopyrightsInNoticeFile checkLicenseHeaders checkGitAttributes
-  detekt-issues:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-    - name: Check for Detekt Issues
-      uses: gradle/gradle-build-action@v3
-      with:
-        gradle-home-cache-cleanup: true
-        arguments: detekt
-    - name: Check for Detekt Issues with type resolution
-      uses: gradle/gradle-build-action@v3
-      with:
-        gradle-home-cache-cleanup: true
-        arguments: detektMain detektTestFixtures detektTest detektFunTest
-    - name: Upload SARIF File
-      uses: github/codeql-action/upload-sarif@v3
-      if: ${{ always() }} # Upload even if the previous step failed.
-      with:
-        sarif_file: build/reports/detekt/merged.sarif
-  markdown-links:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-    - name: Check Links
-      uses: gaurav-nelson/github-action-markdown-link-check@v1
-      with:
-        base-branch: main
-        check-modified-files-only: yes
-        max-depth: 2
-        use-quiet-mode: yes
-  markdownlint:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Setup Node
-        uses: actions/setup-node@v4
-      - name: Check for Markdown issues
-        run: |
-          npm install -g markdownlint-rule-max-one-sentence-per-line@0.0.2
-          npx markdownlint-cli2
-  qodana-scan:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: Qodana Scan
-      uses: JetBrains/qodana-action@v2023.3.2
-      with:
-        post-pr-comment: false
-        use-caches: false
-    - uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: ${{runner.temp}}/qodana/results/qodana.sarif.json
-  reuse-tool:
-    runs-on: ubuntu-22.04
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v4
-    - name: Setup Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.10"
-        cache: pip
-    - name: Check REUSE Compliance
-      run: |
-        pip install --user reuse
-        ~/.local/bin/reuse lint
+#name: Static Analysis
+#
+#on:
+#  pull_request:
+#    branches:
+#      - main
+#  push:
+#    branches:
+#      - main
+#
+#env:
+#  GRADLE_OPTS: -Dorg.gradle.daemon=false
+#
+#jobs:
+#  commit-lint:
+#    runs-on: ubuntu-22.04
+#    steps:
+#      - name: Checkout Repository
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#      - uses: wagoid/commitlint-github-action@v6
+#        with:
+#          configFile: .commitlintrc.yml
+#  code-base-checks:
+#    runs-on: ubuntu-22.04
+#    steps:
+#    - name: Checkout Repository
+#      uses: actions/checkout@v4
+#    - name: Check copyrights, license headers, and .gitattributes
+#      uses: gradle/gradle-build-action@v3
+#      with:
+#        gradle-home-cache-cleanup: true
+#        arguments: checkCopyrightsInNoticeFile checkLicenseHeaders checkGitAttributes
+#  detekt-issues:
+#    runs-on: ubuntu-22.04
+#    steps:
+#    - name: Checkout Repository
+#      uses: actions/checkout@v4
+#    - name: Check for Detekt Issues
+#      uses: gradle/gradle-build-action@v3
+#      with:
+#        gradle-home-cache-cleanup: true
+#        arguments: detekt
+#    - name: Check for Detekt Issues with type resolution
+#      uses: gradle/gradle-build-action@v3
+#      with:
+#        gradle-home-cache-cleanup: true
+#        arguments: detektMain detektTestFixtures detektTest detektFunTest
+#    - name: Upload SARIF File
+#      uses: github/codeql-action/upload-sarif@v3
+#      if: ${{ always() }} # Upload even if the previous step failed.
+#      with:
+#        sarif_file: build/reports/detekt/merged.sarif
+#  markdown-links:
+#    runs-on: ubuntu-22.04
+#    steps:
+#    - name: Checkout Repository
+#      uses: actions/checkout@v4
+#    - name: Check Links
+#      uses: gaurav-nelson/github-action-markdown-link-check@v1
+#      with:
+#        base-branch: main
+#        check-modified-files-only: yes
+#        max-depth: 2
+#        use-quiet-mode: yes
+#  markdownlint:
+#    runs-on: ubuntu-22.04
+#    steps:
+#      - name: Checkout Repository
+#        uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#      - name: Setup Node
+#        uses: actions/setup-node@v4
+#      - name: Check for Markdown issues
+#        run: |
+#          npm install -g markdownlint-rule-max-one-sentence-per-line@0.0.2
+#          npx markdownlint-cli2
+#  qodana-scan:
+#    runs-on: ubuntu-22.04
+#    steps:
+#    - name: Checkout Repository
+#      uses: actions/checkout@v4
+#      with:
+#        fetch-depth: 0
+#    - name: Qodana Scan
+#      uses: JetBrains/qodana-action@v2023.3.2
+#      with:
+#        post-pr-comment: false
+#        use-caches: false
+#    - uses: github/codeql-action/upload-sarif@v3
+#      with:
+#        sarif_file: ${{runner.temp}}/qodana/results/qodana.sarif.json
+#  reuse-tool:
+#    runs-on: ubuntu-22.04
+#    steps:
+#    - name: Checkout Repository
+#      uses: actions/checkout@v4
+#    - name: Setup Python
+#      uses: actions/setup-python@v5
+#      with:
+#        python-version: "3.10"
+#        cache: pip
+#    - name: Check REUSE Compliance
+#      run: |
+#        pip install --user reuse
+#        ~/.local/bin/reuse lint
