--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,9 +4,9 @@ on:
   pull_request:
     branches:
       - main
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
 
 env:
   GRADLE_OPTS: -Dorg.gradle.daemon=false -Dkotest.assertions.multi-line-diff=unified
@@ -116,19 +116,43 @@ jobs:
         flags: funTest-non-docker
   funTest-docker:
     runs-on: ubuntu-22.04
-    container:
-      image: ghcr.io/oss-review-toolkit/ort:snapshot
-      options: --user 1001
+#    container:
+#      image: ghcr.io/oss-review-toolkit/ort:snapshot
+#      options: --user 1001
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
         submodules: recursive
-    - name: Run functional tests that do require external tools
+    - name: Free Disk Space
+      uses: ./.github/actions/free-disk-space
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    - name: Build ORT Docker Image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        load: true
+        tags: ${{ steps.meta-ort.outputs.tags }}
+        labels: ${{ steps.meta-ort.outputs.labels }}
+        cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ github.repository_owner }}/ort:cache
+    - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
       with:
         gradle-home-cache-cleanup: true
-        arguments: --scan -Ptests.include=org.ossreviewtoolkit.plugins.packagemanagers.* funTest jacocoFunTestReport
+    - name: Run functional tests that do require external tools
+      run: |
+        sudo chown -R 1000:1000 /home/runner/.gradle
+        sudo chown -R 1000:1000 ${{ github.workspace }}
+        docker run \
+          -v ${{ github.workspace }}:/workspace \
+          -v /home/runner/.gradle:/home/ort/.gradle \
+          -w /workspace \
+          --entrypoint=sh \
+          ${{ env.IMAGE_TAG }} \
+          -c "GRADLE_USER_HOME=/home/ort/.gradle ./gradlew --scan -Ptests.include=org.ossreviewtoolkit.plugins.packagemanagers.* funTest jacocoFunTestReport"
+        sudo chown -R 1001:121 /home/runner/.gradle
+        sudo chown -R 1001:121 ${{ github.workspace }}
     - name: Upload code coverage data
       uses: codecov/codecov-action@v4
       with:
