--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,44 +24,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: Print Disk Space
-        run: |
-          df -h
-      - name: List Docker Images
-        run: |
-          docker images
-      - name: Remove Unneeded Docker Images
-        run: |
-          docker image rm node:16 node:16-alpine node:18 node:18-alpine node:20 node:20-alpine debian:10 debian:11 ubuntu:20.04 ubuntu:22.04
-      - name: Print Disk Space
-        run: |
-          df -h
-      - name: Get Size of Installed Tools
-        if: ${{ false }} # Can be enabled if the 'Remove Tools' step below needs to be updated.
-        run: |
-          sudo du -hsc /usr/lib/*
-          sudo du -hsc /usr/local/*
-          sudo du -hsc /usr/local/lib/*
-          sudo du -hsc /usr/local/share/*
-          sudo du -hsc /usr/share/*
-      - name: Remove Unneeded Tools
-        run: |
-          sudo rm -rf /usr/local/lib/android
-          sudo rm -rf /usr/local/lib/node_modules
-          sudo rm -rf /usr/local/share/chromium
-          sudo rm -rf /usr/local/share/powershell
-          sudo rm -rf /usr/share/az_11.3.1
-          sudo rm -rf /usr/share/dotnet
-          #sudo rm -rf /usr/share/gradle-8.7
-          sudo rm -rf /usr/share/kotlinc
-          sudo rm -rf /usr/share/mecab
-          sudo rm -rf /usr/share/miniconda
-          sudo rm -rf /usr/share/ri
-          sudo rm -rf /usr/share/sbt
-          sudo rm -rf /usr/share/swift
-      - name: Print Disk Space
-        run: |
-          df -h
+      - name: Free Disk Space
+        uses: ./.github/actions/free-disk-space
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
